--- a/web/admin/class-builder.gohtml
+++ b/web/admin/class-builder.gohtml
@@ -7,7 +7,11 @@
   <div class="row">
     <div class="col-lg-6">
       <label for="name">Class Name</label>
-      <input type="text" id="name" name="name" value="{{ .Name }}">
+      <input type="text" id="name" name="name" class="form-control" value="{{ .Class.Name }}">
+    </div>
+    <div class="col-lg-6">
+      <label for="slug">Slug</label>
+      <input type="text" id="slug" name="slug" class="form-control" pattern="[a-z0-9_]+" value="{{ .Class.Slug }}">
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
