Adding link to New Class

--- a/web/admin/base.gohtml
+++ b/web/admin/base.gohtml
@@ -24,7 +24,7 @@
             <li>
               <a href="#" class="link-primary align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#class-collapse" aria-expanded="true">Classes</a>
               <ul class="list-unstyled small collapse ps-3" id="class-collapse">
-                <li><a href="#" class="link-secondary">New Class</a></li>
+                <li><a href="/admin/classes/new" class="link-secondary">New Class</a></li>
               </ul>
             </li>
           </ul>
