--- a/web/admin/base.gohtml
+++ b/web/admin/base.gohtml
@@ -31,6 +31,7 @@
             <li>
               <a href="#" class="link-primary align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#{{ .Slug }}-collapse" aria-expanded="true">{{ .Name }}</a>
               <ul class="list-unstyled small collapse ps-3" id="{{ .Slug }}-collapse">
+                <li><a href="/admin/classes/{{ .Slug }}/" class="link-secondary">Details</a></li>
                 <li><a href="/admin/classes/{{ .Slug }}/edit" class="link-secondary">Edit</a></li>
                 <li><a href="/admin/classes/{{ .Slug }}/fields" class="link-secondary">Fields</a></li>
               </ul>
