Forcing field names to start with a letter

--- a/web/admin/class-field-builder.gohtml
+++ b/web/admin/class-field-builder.gohtml
@@ -59,7 +59,7 @@
       </div>
       <div class="col-lg-6">
         <label for="${id}-name">Field Name</label>
-        <input type="text" id="${id}-name" class="form-control mb-3" name="name" pattern="[a-z0-9_]+" title="Must be lowercase alphanumeric; underscores allowed" value="" required>
+        <input type="text" id="${id}-name" class="form-control mb-3" name="name" pattern="[a-z][a-z0-9_]+" title="Must be lowercase alphanumeric; underscores allowed" value="" required>
       </div>
     </div>
   </template>
