--- a/web/admin/class-builder.gohtml
+++ b/web/admin/class-builder.gohtml
@@ -8,13 +8,39 @@
 {{ end }}
 <form method="post">
   <div class="row g-3">
-    <div class="col-lg-6 mb-3">
-      <label for="name">Class Name</label>
+    <div class="col-lg-3 mb-3">
+      <label for="name">Class Name <em class="text-muted">Typically plural</em></label>
       <input type="text" id="name" name="name" class="form-control" value="{{ .Class.Name }}">
     </div>
-    <div class="col-lg-6 mb-3">
+    <div class="col-lg-3 mb-3">
       <label for="slug">Slug</label>
-      <input type="text" id="slug" name="slug" class="form-control" pattern="[a-z0-9_]+" value="{{ .Class.Slug }}">
+      <input type="text" id="slug" name="slug" class="form-control" pattern="[a-z][a-z0-9_]+" value="{{ .Class.Slug }}">
+    </div>
+    <div class="col-lg-3 mb-3">
+      <label for="singular_name">Singular Name</label>
+      <input type="text" id="singular_name" name="singular_name" class="form-control" value="{{ .Class.SingularName }}">
+    </div>
+    <div class="col-lg-3 mb-3">
+      <label for="menu_label">Menu Label</label>
+      <input type="text" id="menu_label" name="menu_label" class="form-control" value="{{ .Class.MenuLabel }}">
+    </div>
+  </div>
+  <div class="row g-3">
+    <div class="col-lg-3 mb-3">
+      <label for="add_item_label">Add Item Label</label>
+      <input type="text" id="add_item_label" name="add_item_label" class="form-control" value="{{ .Class.AddItemLabel }}">
+    </div>
+    <div class="col-lg-3 mb-3">
+      <label for="new_item_label">New Item Label</label>
+      <input type="text" id="new_item_label" name="new_item_label" class="form-control" value="{{ .Class.NewItemLabel }}">
+    </div>
+    <div class="col-lg-3 mb-3">
+      <label for="edit_item_label">Edit Item Label</label>
+      <input type="text" id="edit_item_label" name="edit_item_label" class="form-control" value="{{ .Class.EditItemLabel }}">
+    </div>
+    <div class="col-lg-3 mb-3">
+      <label for="view_item_label">View Item Label</label>
+      <input type="text" id="view_item_label" name="view_item_label" class="form-control" value="{{ .Class.ViewItemLabel }}">
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
