Incorporating new label fields in nav

--- a/web/admin/base.gohtml
+++ b/web/admin/base.gohtml
@@ -29,10 +29,10 @@
             </li>
             {{ range .ClassList }}
             <li>
-              <a href="#" class="link-primary align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#{{ .Slug }}-collapse" aria-expanded="true">{{ .Name }}</a>
-              <ul class="list-unstyled small collapse ps-3" id="{{ .Slug }}-collapse">
-                <li><a href="/admin/classes/{{ .Slug }}/" class="link-secondary">Details</a></li>
-                <li><a href="/admin/classes/{{ .Slug }}/edit" class="link-secondary">Edit</a></li>
+              <a href="#" class="link-primary align-items-center{{ if ne $.Class.Id .Id }} collapsed{{ end }}" data-bs-toggle="collapse" data-bs-target="#collapse-{{ .Id.Hex }}" aria-expanded="true">{{ .MenuLabel }}</a>
+              <ul class="list-unstyled small {{ if ne $.Class.Id .Id }}collapse{{ end }} ps-3" id="collapse-{{ .Id.Hex }}">
+                <li><a href="/admin/classes/{{ .Slug }}/new" class="link-secondary">{{ .AddItemLabel }}</a></li>
+                <li><a href="/admin/classes/{{ .Slug }}/edit" class="link-secondary">Edit Class</a></li>
                 <li><a href="/admin/classes/{{ .Slug }}/fields" class="link-secondary">Fields</a></li>
               </ul>
             </li>
