--- a/web/admin/class-field-builder.gohtml
+++ b/web/admin/class-field-builder.gohtml
@@ -74,7 +74,7 @@
         <input type="date" id="${id}-max" class="form-control mb-3" name="max" value="">
       </div>
       <div class="col-lg-3">
-        <label for="${id}-step">Step (seconds)</label>
+        <label for="${id}-step">Step (days)</label>
         <input type="number" id="${id}-step" class="form-control mb-3" name="step" min="0" value="">
       </div>
     </div>
