Adding links for future settings area

--- a/server/templates/admin/base.html
+++ b/server/templates/admin/base.html
@@ -38,6 +38,13 @@
               </ul>
             </li>
             {{ end }}
+            <li>
+              <a href="#" class="link-primary align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#settings-collapse" aria-expanded="true">Settings</a>
+              <ul class="list-unstyled small collapse ps-3" id="settings-collapse">
+                <li><a href="/admin/settings/general" class="link-secondary">General</a></li>
+                <li><a href="/admin/settings/base-template" class="link-secondary">Base Template</a></li>
+              </ul>
+            </li>
           </ul>
         </nav>
       </aside>
